# PySigma-backend-spark

./: .gitignore  README.md  pyproject.toml
sigma/backends/spark/: __init__.py  array.py  spark.py
tests/: conftest.py  test_backend_array.py  test_backend_spark.py
