[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pySigma-backend-spark"
dynamic = ["version"]
dependencies = ["pysigma"]

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[tool.setuptools.dynamic]
version = { attr = "sigma.backends.spark.__version__" }
